# base-accessors

./: CMakeLists.txt  README.md
apps/: imageToFITS.cc  tDataAccess.cc
askap/calibaccess/: CMakeLists.txt  CachedCalSolutionAccessor.cc  CachedCalSolutionAccessor.h  CalParamNameHelper.cc  CalParamNameHelper.h  CalSolutionConstSourceStub.cc  CalSolutionConstSourceStub.h  CalSolutionSourceStub.cc  CalSolutionSourceStub.h  CalibAccessFactory.cc  CalibAccessFactory.h  ChanAdapterCalSolutionConstAccessor.cc  ChanAdapterCalSolutionConstAccessor.h  ChanAdapterCalSolutionConstSource.cc  ChanAdapterCalSolutionConstSource.h  ICalSolutionAccessor.cc  ICalSolutionAccessor.h  ICalSolutionConstAccessor.cc  ICalSolutionConstAccessor.h  ICalSolutionConstSource.cc  ICalSolutionConstSource.h  ICalSolutionSource.h  JonesDTerm.h  JonesIndex.cc  JonesIndex.h  JonesJTerm.h  MemCalSolutionAccessor.cc  MemCalSolutionAccessor.h  ParsetCalSolutionAccessor.cc  ParsetCalSolutionAccessor.h  ParsetCalSolutionConstSource.cc  ParsetCalSolutionConstSource.h  ParsetCalSolutionSource.cc  ParsetCalSolutionSource.h  ServiceCalSolutionSourceStub.cc  ServiceCalSolutionSourceStub.h  TableCalSolutionConstSource.cc  TableCalSolutionConstSource.h  TableCalSolutionFiller.cc  TableCalSolutionFiller.h  (+2 more)
askap/dataaccess/: BasicDataConverter.cc  BasicDataConverter.h  BestWPlaneDataAccessor.cc  BestWPlaneDataAccessor.h  CachedAccessorField.h  DataAccessError.cc  DataAccessorAdapter.cc  DataAccessorAdapter.h  DataAccessorStub.cc  DataAccessorStub.h  DataIteratorAdapter.cc  DataIteratorAdapter.h  DataIteratorStub.cc  DataIteratorStub.h  DirectionConverter.cc  DirectionConverter.h  DopplerConverter.cc  DopplerConverter.h  EpochConverter.cc  EpochConverter.h  FakeSingleStepIterator.cc  FakeSingleStepIterator.h  FeedSubtableHandler.cc  FeedSubtableHandler.h  FieldSubtableHandler.cc  FieldSubtableHandler.h  GenericConverter.h  IAntennaSubtableHandler.h  IBufferManager.h  IConstDataAccessor.cc  IConstDataIterator.cc  IConstDataIterator.h  IConstDataSource.cc  IConstDataSource.h  IConverterBase.cc  IDataAccessor.h  IDataConverter.h  IDataConverterImpl.h  IDataIterator.cc  IDataIterator.h  (+89 more)
askap/imageaccess/: BeamLogger.cc  CasaImageAccess.cc  CasaImageAccess.h  FITSImageRW.cc  FitsImageAccess.cc  FitsImageAccess.h  IImageAccess.cc  ImageAccessFactory.cc  ImageAccessFactory.h
askap/votable/: CMakeLists.txt  VOTable.cc  VOTable.h  VOTableField.cc  VOTableGroup.cc  VOTableGroup.h  VOTableInfo.cc  VOTableParam.cc  VOTableResource.cc  VOTableResource.h  VOTableRow.cc  VOTableTable.cc  VOTableTable.h  XercescUtils.cc
tests/calibaccess/: CMakeLists.txt  CachedCalSolutionTest.h  CalParamNameHelperTest.h  MemCalSolutionAccessorTest.h  ParsetCalSolutionTest.h  TableCalSolutionTest.h  tcalibaccess.cc
tests/dataaccess/: CMakeLists.txt  CachedAccessorFieldTest.h  DataAccessTestImpl.cc  DataAccessTestImpl.h  DataAccessorAdapterTest.h  DataConverterTest.h  TableDataAccessTest.h  TableTestRunner.h  TimeChunkIteratorAdapterTest.h  UVWMachineCacheTest.h
tests/imageaccess/: CMakeLists.txt  CasaImageAccessTest.h  FitsImageAccessTest.h  timageaccess.cc
tests/votable/: CMakeLists.txt  VOTableTest.h  XercescStringTest.h  tvotable.cc
